--- a/src/views/user/blog-list.ejs
+++ b/src/views/user/blog-list.ejs
@@ -9,7 +9,7 @@
 <html lang="en" class="no-js">
 <head>
 	<!-- Basic need -->
-	<title>Open Pediatrics</title>
+	<title>Blog</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -47,10 +47,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="hero-ct">
-                            <h1> blog listing - list</h1>
+                            <h1> Danh sách blog</h1>
                             <ul class="breadcumb">
-                                <li class="active"><a href="#">Home</a></li>
-                                <li> <span class="ion-ios-arrow-right"></span> blog listing</li>
+                                <li class="active"><a href="#">Trang chủ</a></li>
+                                <li> <span class="ion-ios-arrow-right"></span> Danh sách blog</li>
                             </ul>
                         </div>
                     </div>
@@ -62,57 +62,56 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9 col-sm-12 col-xs-12">
-                        <div class="blog-item-style-1 blog-item-style-3">
-                            <!-- <img src="/user/images/uploads/bloglist-it1.jpg" alt=""> -->
-                            <div class="blog-it-infor custom-blog-card">
-                                <h3><a href="blogdetail.html">Godzilla: King Of The Monsters Adds O’Shea Jackson Jr</a></h3>
-                                <p>Người đăng: <a href="">Le Duc Tung</a></p>
-                                <span class="time">27 Mar 2017</span>
+                        <% blogPage.data.forEach(blog => { %>
+                            <div class="blog-item-style-1 blog-item-style-3">
+                                <!-- <img src="/user/images/uploads/bloglist-it1.jpg" alt=""> -->
+                                <div class="blog-it-infor custom-blog-card">
+                                    <h3><a href="/blog/<%- blog.slug %>-<%- blog._id %>"><%- blog.title %></a></h3>
+                                    <p>Người đăng: <a href="/user/profile/<%- blog.blogger.profile.username %>-<%- blog.blogger._id %>"><%- blog.blogger.profile.full_name %> </a></p>
+                                    <span class="time"><%- blog.createdAt %> </span>
+                                </div>
                             </div>
-                        </div>
-                        <ul class="pagination">
-                            <li class="icon-prev"><a href="#"><i class="ion-ios-arrow-left"></i></a></li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">...</a></li>
-                            <li><a href="#">21</a></li>
-                            <li><a href="#">22</a></li>
-                            <li class="icon-next"><a href="#"><i class="ion-ios-arrow-right"></i></a></li>
-                        </ul>
+                        <% }) %>
+                        <%- include('layouts/pagination.ejs', {
+                            limitTitle: 'Blog',
+                            data: blogPage,
+                            pageLink: '/blog'+link,
+                            title: 'Blog mỗi trang',
+                            isParam: true,
+                        }) %> 
                     </div>
                     <div class="col-md-3 col-sm-12 col-xs-12">
                         <div class="sidebar">
-                            <div class="sb-search sb-it">
-                                <h4 class="sb-title">Search</h4>
-                                <input type="text" placeholder="Enter keywords">
+                            <div class="searh-form">
+                                <h4 class="sb-title">Tìm bài viết</h4>
+                                <form class="form-style-1" action="#">
+                                    <div class="row">
+                                        <div class="col-md-12 form-it">
+                                            <label>Tên blog</label>
+                                            <input type="text" placeholder="Tên blog" name="title">
+                                        </div>
+                                        <div class="col-md-12 form-it">
+                                            <label>Tags</label>
+                                            <div class="group-ip">
+                                                <select
+                                                    name="id" multiple="" class="ui fluid dropdown">
+                                                    <option value="">Chọn tag</option>
+                                                    <% blogTag.forEach(tag => { %>
+                                                        <option value="<%- tag._id %>"><%- tag.name %></option>
+                                                    <% }) %>
+                                                </select>
+                                            </div>	
+                                        </div>
+                                        <div class="col-md-12 ">
+                                            <input class="submit" type="submit" value="Tìm kiếm">
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                            <div class="sb-cate sb-it">
-                                <h4 class="sb-title">Categories</h4>
-                                <ul>
-                                    <li><a href="#">Awards (50)</a></li>
-                                    <li><a href="#">Box office (38)</a></li>
-                                    <li><a href="#">Film reviews (72)</a></li>
-                                    <li><a href="#">News (45)</a></li>
-                                    <li><a href="#">Global (06)</a></li>
-                                </ul>
-                            </div>
-                            <div class="sb-recentpost sb-it">
-                                <h4 class="sb-title">most popular</h4>
-                                <div class="recent-item">
-                                    <span>01</span><h6><a href="#">Korea Box Office: Beauty and the Beast Wins Fourth</a></h6>
-                                </div>
-                                <div class="recent-item">
-                                    <span>02</span><h6><a href="#">Homeland Finale Includes Shocking Death </a></h6>
-                                </div>
-                                <div class="recent-item">
-                                    <span>03</span><h6><a href="#">Fate of the Furious Reviews What the Critics Saying</a></h6>
-                                </div>
-                            </div>
-                            <div class="sb-tags sb-it">
+                            <!-- <div class="sb-tags sb-it">
                                 <h4 class="sb-title">tags</h4>
                                 <ul class="tag-items">
+                                    
                                     <li><a href="#">Batman</a></li>
                                     <li><a href="#">film</a></li>
                                     <li><a href="#">homeland</a></li>
@@ -121,7 +120,7 @@
                                     <li><a href="#">King</a></li>
                                     <li><a href="#">Beauty</a></li>
                                 </ul>
-                            </div>
+                            </div> -->
                             <div class="ads">
                                 <img src="/user/images/uploads/ads1.png" alt="">
                             </div>
