--- a/src/views/user/book-list.ejs
+++ b/src/views/user/book-list.ejs
@@ -85,7 +85,7 @@
                                     </div>
                                     <div class="mv-item-infor">
                                         <h6><a href="/book/<%- book.slug %>-<%= book._id %>"><%- book.book_name %> </a></h6>
-                                        <p class="rate"><i class="ion-android-star"></i><span>8.1</span> /10</p>
+                                        <p class="rate"><i class="ion-android-star"></i><span><%- book.vote %></span> /5</p>
                                     </div>
                                 </div>					
                             <% }) %>
