--- a/src/public/user/css/blog.css
+++ b/src/public/user/css/blog.css
@@ -76,3 +76,13 @@
 .title {
     margin-bottom: 10px !important;
 }
+
+i.ion-android-star {
+    color: #f5b50a;
+    font-size: 22px;
+}
+
+.rate-number {
+    font-weight: 400;
+    font-size: 18px;
+}
