--- a/src/views/user/book-detail.ejs
+++ b/src/views/user/book-detail.ejs
@@ -63,11 +63,27 @@
                                     </div>		
                                 </div>
                                 <div class="mv-details">
-                                    <p><i class="ion-android-star"></i><span>7.4</span> /10</p>
+                                    <p><i class="ion-android-star"></i><span><%- book.vote %></span> /5</p>
                                     <ul class="mv-infor">
-                                        <li>  Ngày đăng: <%- book.createdAt %>  </li>
+                                        <li class="datetime">  Ngày đăng: <%- book.createdAt %>  </li>
                                     </ul>
                                 </div>	
+                                
+                                <div class="rate-star-custom movie-rate-custom">
+                                    <p>Đánh giá bài này:  </p>
+                                    <div class="rate">
+                                        <input type="radio" id="star5" name="rate" value="5" />
+                                        <label for="star5" title="text">5 stars</label>
+                                        <input type="radio" id="star4" name="rate" value="4" />
+                                        <label for="star4" title="text">4 stars</label>
+                                        <input type="radio" id="star3" name="rate" value="3" />
+                                        <label for="star3" title="text">3 stars</label>
+                                        <input type="radio" id="star2" name="rate" value="2" />
+                                        <label for="star2" title="text">2 stars</label>
+                                        <input type="radio" id="star1" name="rate" value="1" />
+                                        <label for="star1" title="text">1 star</label>
+                                    </div>
+                                </div>
                             </div>		
                         </div>
                     </div>
@@ -83,9 +99,9 @@
                             <div class="movie-tabs">
                                 <div class="tabs">
                                     <ul class="tab-links tabs-mv">
-                                        <li class="<%- (allComment.page === 1 && allComment.limit === 5) && 'active' %>"><a href="#overview">Overview</a></li>
-                                        <li class="<%- (allComment.page !== 1 || allComment.limit !== 5) && 'active' %>"><a href="#comment"> Comment</a></li>
-                                        <li><a href="#related-book"> Related Books</a></li>                        
+                                        <li class="<%- (allComment.page === 1 && allComment.limit === 5) && 'active' %>"><a href="#overview">Tổng quan</a></li>
+                                        <li class="<%- (allComment.page !== 1 || allComment.limit !== 5) && 'active' %>"><a href="#comment"> Bình luận</a></li>
+                                        <li><a href="#related-book"> Bài liên quan</a></li>                        
                                     </ul>
                                     <div class="tab-content">
                                         <div id="overview" class="tab <%- (allComment.page === 1 && allComment.limit === 5) && 'active' %> ">
@@ -108,7 +124,7 @@
                                                         <img src="<%- comment.user.profile.image %>" alt="" width="40px" height="40px">
                                                         <div class="comment-info">
                                                             <h4 style="color: #ffffff;"><%- comment.user.profile.full_name %></h4>
-                                                            <p class="time"><%- comment.createdAt %></p>
+                                                            <p class="time datetime"><%- comment.createdAt %></p>
                                                         </div>
                                                     </div>
                                                     <p><%- comment.content %></p>
@@ -128,9 +144,9 @@
                                                     <img src="<%- related.image.small %>" alt="" width="185px" height="284px">
                                                     <div class="mv-item-infor">
                                                         <h6><a href="/book/<%- related.slug %>-<%- related._id %>"><%- related.book_name %></a></h6>
-                                                        <p class="rate"><i class="ion-android-star"></i><span>8.1</span> /10</p>
+                                                        <p class="rate"><i class="ion-android-star"></i><span><%- related.vote %></span> /5</p>
                                                         <p class="describe describe-custom"><%- related.review %></p>
-                                                        <p class="run-time"> Ngày đăng: <%- related.createdAt %> </p>
+                                                        <p class="run-time datetime"> Ngày đăng: <%- related.createdAt %> </p>
                                                         <p>Người đăng: <a href="/user/profile/<%- related.reviewer.profile.username %>-<%- related.reviewer._id %>"><%- related.reviewer.profile.full_name %></a></p>
                                                         <p>Tác giả sách: <a href="#"></a></p>
                                                     </div>
