--- a/src/views/user/layouts/javascript.ejs
+++ b/src/views/user/layouts/javascript.ejs
@@ -3,3 +3,13 @@
 <script src="/user/js/plugins2.js"></script>
 <script src="/user/js/custom.js"></script>
 <script src="/user/js/custom-jquery.js"></script>
+<script src="/javascripts/moment.js"></script>
+<script src="/javascripts/moment-with-locale.js"></script>
+
+<script>
+    $(document).ready(function() {
+        moment.locale('vi');
+        var time = $('.datetime').html();
+        $('.datetime').text(moment(new Date(time)).format('lll'));
+    });
+</script>
