--- a/src/public/admin/css/style.css
+++ b/src/public/admin/css/style.css
@@ -4114,10 +4114,154 @@ Widgets
 }
 .admin-table__icon-delete {
   font-size: 1.6rem;
-  color: #cacaca;
+  color: red;
   cursor: pointer;
   transition: color 0.4s ease;
 }
-.admin-table__icon-delete:hover {
-  color: red;
+
+.topbar-filter {
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 30px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+@media (max-width: 767px) {
+  .topbar-filter {
+    display: flex;
+    flex-direction: column;
+    padding: 15px 0;
+  }
+}
+.topbar-filter p {
+  padding-right: 200px;
+  margin-bottom: 0;
+}
+@media (max-width: 991px) {
+  .topbar-filter p {
+    padding-right: 0;
+  }
+}
+.topbar-filter p span {
+  color: #4280bf;
+}
+.topbar-filter label,
+.topbar-filter select {
+  font-family: 'Nunito', sans-serif;
+  font-size: 14px;
+  color: #000000;
+  font-weight: 300;
+  text-transform: none;
+}
+.topbar-filter select {
+  width: 120px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-top: none;
+  border-bottom: none;
+  color: #399bff;
+  font-weight: 400;
+}
+@media (max-width: 767px) {
+  .topbar-filter select {
+    border: 1px solid #ddd;
+  }
+}
+.topbar-filter option {
+  background-color: #ffffff;
+}
+.topbar-filter .list,
+.topbar-filter .grid {
+  font-size: 16px;
+  color: #000000;
+  margin-left: -15px;
+}
+.topbar-filter .list i,
+.topbar-filter .grid i {
+  width: 40px;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 35px;
+}
+.topbar-filter .list {
+  border-right: 1px solid #ddd;
+}
+@media (max-width: 767px) {
+  .topbar-filter .list {
+    border: none;
+  }
+}
+.topbar-filter .active,
+.topbar-filter i:hover {
+  color: #dcf836;
+}
+.topbar-filter .pagination2 {
+  padding-left: 100px;
+}
+@media (max-width: 767px) {
+  .topbar-filter .pagination2 {
+    padding-left: 0;
+    margin-top: 15px;
+  }
+}
+.topbar-filter .pagination2 span {
+  margin-right: 15px;
+}
+.topbar-filter .pagination2 span,
+.topbar-filter .pagination2 a {
+  font-family: 'Nunito', sans-serif;
+  font-size: 14px;
+  color: #000000;
+  font-weight: 300;
+  text-transform: none;
+}
+.topbar-filter .pagination2 a {
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #399bff;
+  font-weight: bolder;
+}
+.topbar-filter .pagination2 a.active,
+.topbar-filter .pagination2 a:hover {
+  color: #777;
+  font-weight: bolder;
+}
+.topbar-filter.fw p {
+  padding-right: 600px;
+}
+@media (max-width: 991px) {
+  .topbar-filter.fw p {
+    padding-right: 170px;
+  }
+}
+@media (max-width: 767px) {
+  .topbar-filter.fw p {
+    padding-right: 0;
+  }
+}
+.topbar-filter.user p {
+  padding-right: 300px;
+}
+#panel-search{
+  display: none;
+}
+.flex-search{
+  display: flex; 
+  justify-content: space-between;
+}
+.flex-left-search{
+  flex: 1;margin-right: 10px;
+}
+.flex-right-search{
+  flex: 1;
 }
