--- a/src/views/admin/banner.ejs
+++ b/src/views/admin/banner.ejs
@@ -38,7 +38,7 @@
     
     <!-- Start Page Header Right Div -->
     <div class="right">
-      <a href="/admin/create-banner" type="button" class="btn btn-success btn-lg" >Thêm</a>
+      <a href="/admin/banner/create" type="button" class="btn btn-success btn-lg" >Thêm</a>
     </div>
     <!-- End Page Header Right Div -->
     <div class="btn-group" role="group" aria-label="...">
