--- a/src/views/user/index.ejs
+++ b/src/views/user/index.ejs
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="">
 	<meta name="author" content="">
 	<link rel="profile" href="#">
-
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<!-- Mobile specific meta -->
 	<meta name=viewport content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone-no">
