--- a/src/views/admin/user.ejs
+++ b/src/views/admin/user.ejs
@@ -15,24 +15,18 @@
   <!-- Start Page Loading -->
   <%- include('layouts/loading') %>
   <!-- End Page Loading -->
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
   <!-- START HEADER -->
   <%- include('layouts/header') %>
   <!-- END HEADER -->
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
 
 
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
 <!-- START SIDEBAR -->
 <%- include('layouts/sidebar') %>
 <!-- END SIDEBAR -->
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
 
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
 <!-- START CONTENT -->
 <div class="content">
 
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
 <!-- START CONTAINER -->
 <div class="container-padding">
   <!-- Start Row -->
@@ -111,7 +105,8 @@
                       </button>
                     </td>
                     <td>
-                      <a href="/admin/user/<%- user._id %>"><i class=" admin-table__icon-edit"> Reset Password</i></a>
+                      <!-- <a href="/admin/user/<%- user._id %>"><i class=" admin-table__icon-edit"> Reset Password</i></a> -->
+                      <a href="#"><i class=" admin-table__icon-edit"> Reset Password</i></a>
                     </td>
                   </tr> 
                 <% }) %>
@@ -153,15 +148,11 @@
   <!-- End Row -->
 </div>
 <!-- END CONTAINER -->
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
 </div>
 <!-- End Content -->
- <!-- //////////////////////////////////////////////////////////////////////////// --> 
  <form name="inActive-user-form" method="POST"></form>
  <form name="active-user-form" method="POST"></form>
 
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
-<!-- //////////////////////////////////////////////////////////////////////////// --> 
 
 
 
